Brought back I2PSnark to 0.9.11 (fix later)